--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/fiber": "^8.17.10",
     "@react-three/rapier": "^1.5.0",
     "@types/three": "^0.169.0",
+    "framer-motion": "^11.11.11",
+    "framer-motion-3d": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.5",
     "react": "^18",
