--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
     "@react-three/csg": "^3.2.0",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
@@ -18,8 +19,10 @@
     "framer-motion-3d": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.5",
+    "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
