--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion-3d": "^11.11.11",
     "lucide-react": "^0.454.0",
     "next": "14.2.5",
+    "next-transition-router": "^0.2.3",
     "prisma": "^5.22.0",
     "react": "^18",
     "react-dom": "^18",
