--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "sass": "^1.81.0",
+    "swiper": "^11.1.15",
     "tailwind-merge": "^2.5.4",
     "three": "^0.170.0"
   },
